--- a/views/portal.xml
+++ b/views/portal.xml
@@ -213,6 +213,12 @@
                         <address t-field="transfer.destination_location_partner_id"
                             t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />
                     </t>
+
+                    <t t-if="transfer.dropship_destination_id">
+                        <hr />
+                        <address t-field="transfer.dropship_destination_id"
+                            t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />                        
+                    </t>
                 </div>
             </div>
 
