--- a/views/portal.xml
+++ b/views/portal.xml
@@ -214,9 +214,9 @@
                             t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />
                     </t>
 
-                    <t t-if="transfer.dropship_destination_id">
+                    <t t-if="transfer.should_print_delivery_address()">
                         <hr />
-                        <address t-field="transfer.dropship_destination_id"
+                        <address t-field="transfer.move_lines[0].partner_id"
                             t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />                        
                     </t>
                 </div>
